--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
-<script type="text/javascript" src="build/iscroll-probe.js"></script>
+<script type="text/javascript" src="../../build/iscroll-probe.js"></script>
 
 <script type="text/javascript">
 
@@ -18,7 +18,7 @@ var myScroll, vScroll, hScroll;
 var positionX, positionY;
 
 function loaded () {
-	myScroll = new IScroll('#wrapper', { scrollX: true, scrollY:true, probeType: 3, interactiveScrollbars:true, scrollbars: true, freeScroll: true, bounce: false });
+	myScroll = new IScroll('#wrapper', { scrollX: true, scrollY:true, probeType: 3, interactiveScrollbars:true, scrollbars: true, freeScroll: false, bounce: true });
 
 	vScroll = new IScroll('#vertical', { probeType :3, freeScroll:true });
 	hScroll = new IScroll('#horizontal', { probeType :3 , scrollY : false, scrollX: true, freeScroll : true});
@@ -96,9 +96,11 @@ body {
 	z-index: 1;
 	top: 100px;
 	bottom: 48px;
+	left: 225px;
 	right: 0px;
-	background: #ccc;
+	background: #fafafa;
 	overflow: hidden;
+	padding-left: 0px !important;
 }
 
 #scroller {
@@ -176,7 +178,7 @@ body {
 	padding: 0;
 	margin: 0;
 	width: 100%;
-	text-align: left;
+	text-align: center;
 }
 
 .h-scroller li {
@@ -190,6 +192,13 @@ body {
 	font-size: 14px;
 }
 
+#great{
+	position: absolute;
+	top: 0px;
+	z-index: 20;
+	left: 0px;
+}
+
 #great ul {
 	list-style: none;
 	padding: 0;
@@ -201,10 +210,12 @@ body {
 #great li {
 	display: block;
 	float: left;
-	width: 220px;
+	width: 200px;
 	height: 100px;
-	background-color: white;
+	background-color: #fafafa;
 	font-size: 14px;
+	border-bottom: 1px solid #ccc;
+	border-right: 1px solid #ccc;
 }
 
 p {
@@ -239,6 +250,13 @@ p {
 	left: 0px;
 }
 
+#horizontal {
+	position: absolute;
+	top: 0px;
+	z-index: 1;
+	left: 230px;
+}
+
 #vertical ul {
 	list-style: none;
 	padding: 0;
@@ -248,11 +266,12 @@ p {
 }
 
 #vertical li {
-	padding: 0 10px;
+	/*padding: 0 10px;*/
 	height: 100px;
 	line-height: 40px;
 	border-bottom: 1px solid #ccc;
 	border-top: 1px solid #fff;
+	border-right: 1px solid #ccc;
 	background-color: #fafafa;
 	font-size: 14px;
 }
@@ -261,9 +280,9 @@ p {
 </head>
 <body onload="loaded()" ng-controller="FirstCtrl as f">
 	<div class="row">
-		<div class="col-lg-2" style="z-index:20;" id="great"> <ul><li> On Now</li></ul></div>
-		<div class="col-lg-10">
-			<div class="col-lg-2" id="horizontal">
+		<div class="col-sm-2" style="z-index:20;" id="great"> <ul><li> On Now</li></ul></div>
+		<div class="col-sm-10">
+			<div id="horizontal">
 				<div class="h-scroller">
 					<ul>
 						<li ng-repeat="col in f.array[0]">COLUMN {{$index+1}}</li>
@@ -273,24 +292,32 @@ p {
 		</div>
 	</div>
 	<div class="row">
-		<div class="col-lg-2" id="vertical">
+		<div class="col-sm-2" id="vertical">
 			<div class="scroller1">
-				<ul>
-					<li ng-repeat="row in f.array">ROW {{$index+1}}</li>
-				</ul>
+				<div class="row" ng-repeat="row in f.array">
+					<div class="col-sm-12">
+						<ul>
+							<li>ROW {{$index+1}}</li>
+						</ul>
+					</div>
+				</div>
 			</div>
 		</div>
-		<div id="wrapper" class="col-lg-10">
+		<div id="wrapper" class="col-sm-10">
 			<div id="scroller">
-				<ul ng-repeat= "row in f.array">
-					<li ng-repeat="column in row">{{column}}</li>
-				</ul>
+				<div class="row" ng-repeat="row in f.array">
+					<div class="col-sm-12">
+						<ul>
+							<li ng-repeat="column in row">{{column}}</li>
+						</ul>
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
 
 	<div id="footer"></div>
-	<script src="angular.min.js"></script>
+	<script src="../../angular.min.js"></script>
 	<script src="app.js"></script>
 </body>
 </html>
