--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ body {
 	bottom: 48px;
 	left: 225px;
 	right: 0px;
-	background: #fafafa;
+	background: white;
 	overflow: hidden;
 	padding-left: 0px !important;
 }
